migrate to H2 DB